--- a/projects/vedrax-material-utility/src/lib/components/vedrax-validation/vedrax-validation.component.html
+++ b/projects/vedrax-material-utility/src/lib/components/vedrax-validation/vedrax-validation.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="control && control.invalid && (control.dirty || control.touched)">
     <div *ngFor="let validation of validations">
         <div *ngIf="getError(validation.validationName)">
-            {{validation.validationMessage}}
+            {{validation.validationMessageAsTranslationKey | translate}}
         </div>
     </div>
 </ng-container>
