--- a/projects/vedrax-material-utility/src/lib/components/vedrax-input/vedrax-input.component.html
+++ b/projects/vedrax-material-utility/src/lib/components/vedrax-input/vedrax-input.component.html
@@ -1,10 +1,9 @@
 <mat-form-field *ngIf="descriptor" [appearance]="formControlAppearance">
     <mat-label>{{descriptor.controlLabel | translate}}</mat-label>
-    <input matInput 
-        [hidden]="hasProperty('hidden')"
-        [type]="hasProperty('type')" 
-        [readonly]="hasProperty('readOnly')"
+    <input matInput [hidden]="hasProperty('hidden')" [type]="hasProperty('type')" [readonly]="hasProperty('readOnly')"
         [formControl]="control">
+    <span *ngIf="descriptor.controlPrefix" matPrefix>{{descriptor.controlPrefix}}&nbsp;</span>
+    <span *ngIf="descriptor.controlSuffix" matSuffix>{{descriptor.controlSuffix}}</span>
     <mat-hint *ngIf="descriptor.controlHint">{{descriptor.controlHint | translate}}</mat-hint>
     <mat-error>
         <vedrax-validation [control]="control" [validations]="descriptor.controlValidations"></vedrax-validation>
