--- a/projects/vedrax-material-utility/src/lib/components/vedrax-checkbox/vedrax-checkbox.component.html
+++ b/projects/vedrax-material-utility/src/lib/components/vedrax-checkbox/vedrax-checkbox.component.html
@@ -1,3 +1,3 @@
 <mat-checkbox *ngIf="descriptor" [formControl]="control">
-    {{descriptor.controlLabel}}
+    {{descriptor.controlLabel | translate}}
 </mat-checkbox>
