add date range picker component

--- a/projects/vedrax-material-utility/src/lib/components/vedrax-datepicker/vedrax-datepicker.component.html
+++ b/projects/vedrax-material-utility/src/lib/components/vedrax-datepicker/vedrax-datepicker.component.html
@@ -1,4 +1,4 @@
-<mat-form-field *ngIf="descriptor">
+<mat-form-field *ngIf="descriptor" [appearance]="formControlAppearance">
     <mat-label>{{descriptor.controlLabel | translate}}</mat-label>
     <input matInput [matDatepicker]="picker"
         [formControl]="control" [disabled]="hasProperty('disabled')">
