--- a/projects/vedrax-material-utility/src/lib/components/vedrax-chips/vedrax-chips.component.html
+++ b/projects/vedrax-material-utility/src/lib/components/vedrax-chips/vedrax-chips.component.html
@@ -1,6 +1,6 @@
 <mat-form-field *ngIf="descriptor">
     <mat-label>{{descriptor.controlLabel | translate}}</mat-label>
-    <mat-chip-list #chipList [aria-label]="descriptor.controlLabel | translate">
+    <mat-chip-list #chipList [attr.aria-label]="descriptor.controlLabel | translate">
         <mat-chip *ngFor="let item of formArray.controls; let i = index;" [selectable]="selectable"
             [removable]="removable" (removed)="remove(i)">
             {{item.value}}
