update with display message

--- a/projects/vedrax-material-utility/src/lib/components/vedrax-upload/vedrax-upload.component.html
+++ b/projects/vedrax-material-utility/src/lib/components/vedrax-upload/vedrax-upload.component.html
@@ -1,7 +1,12 @@
-<div *ngIf="descriptor">
-    <button type="button" mat-stroked-button color="primary" (click)="vedraxFileInput.click()">
-        <mat-icon>add</mat-icon>
-        {{descriptor.controlLabel | translate}}
-    </button>
-    <input type="file" hidden #vedraxFileInput (change)="uploadFiles($event)">
+<div *ngIf="descriptor" class="vedrax-upload-container">
+    <div>
+        {{fileName || (displayMessage | translate)}}
+    </div>
+    <div>
+        <button type="button" mat-stroked-button color="primary" (click)="vedraxFileInput.click()">
+            <mat-icon>add</mat-icon>
+            {{descriptor.controlLabel | translate}}
+        </button>
+        <input type="file" hidden #vedraxFileInput (change)="uploadFiles($event)">
+    </div>
 </div>
