add upload to vedrax control

--- a/projects/vedrax-material-utility/src/lib/components/vedrax-control/vedrax-control.component.html
+++ b/projects/vedrax-material-utility/src/lib/components/vedrax-control/vedrax-control.component.html
@@ -28,4 +28,7 @@
     <!-- handling radio button -->
     <vedrax-radio *ngSwitchCase="'radioButton'" [descriptor]="descriptor" [control]="formComponent"></vedrax-radio>
 
+    <!-- handling upload file -->
+    <vedrax-upload *ngSwitchCase="'upload'" [descriptor]="descriptor" [form]="form"></vedrax-upload>
+
 </div>
