improve index ref

--- a/projects/vedrax-material-utility/src/lib/components/vedrax-dynamic/vedrax-dynamic.component.html
+++ b/projects/vedrax-material-utility/src/lib/components/vedrax-dynamic/vedrax-dynamic.component.html
@@ -25,7 +25,7 @@
 
         <button color="primary" class="add-param" mat-stroked-button aria-label="add" (click)="add()">
             <mat-icon>add</mat-icon>
-            {{descriptor.controlLabel}}
+            {{descriptor.controlLabel | translate}}
         </button>
 
     </div>
